Spacing fix

--- a/week-3/styles.css
+++ b/week-3/styles.css
@@ -12,6 +12,7 @@ div {
     height: 100px;
     width: 100px;
     background-color: red;
+    margin-bottom: 12px;
 }
 
 div p{
@@ -34,6 +35,7 @@ button {
     background-color: cornsilk;
     border-radius: 15px;
     border: 1px solid black;
+    margin-top: 12px;
 }
 
 button:hover {
